--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "pinia": "^2.0.19",
     "pinia-plugin-persist": "^1.0.0",
     "qs": "^6.11.0",
-    "vant": "4.0.0-beta.0",
+    "vant": "4.4.1",
     "vue": "^3.2.37",
     "vue-router": "4.1.5",
     "vue-types": "^4.2.1"
