--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "lint:eslint": "eslint \"{src}/**/*.{vue,ts,tsx}\" --fix",
     "lint:prettier": "prettier --write --loglevel warn \"src/**/*.{js,json,tsx,css,less,scss,vue,html,md}\"",
     "lint:stylelint": "stylelint --fix \"**/*.{vue,less,postcss,css,scss}\" --cache --cache-location node_modules/.cache/stylelint/",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "upload": "cross-env NODE_ENV=production vite build  && esno ./build/script/postBuild.ts && node server.js"
   },
   "dependencies": {
     "@types/lodash-es": "^4.17.6",
@@ -40,6 +41,7 @@
     "pinia-plugin-persist": "^1.0.0",
     "qs": "^6.11.0",
     "vant": "4.4.1",
+    "vconsole": "^3.15.1",
     "vue": "^3.2.37",
     "vue-router": "4.1.5",
     "vue-types": "^4.2.1"
@@ -80,6 +82,7 @@
     "rimraf": "^3.0.2",
     "rollup": "^2.79.0",
     "rollup-plugin-visualizer": "^5.8.1",
+    "scp2": "^0.5.0",
     "stylelint": "^14.10.0",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-recommended": "^9.0.0",
